--- a/Pages/TrialOne.html
+++ b/Pages/TrialOne.html
@@ -19,7 +19,7 @@
       <!-- Nav Items -->
 
       <!-- Dropdown menu for smaller screens -->
-      <div class="Menu" style="float: right">
+      <div class="Menu">
         <input type="checkbox" id="Dropdown" />
         <label for="Dropdown">
           <!-- Menu Button Icon -->
@@ -29,7 +29,7 @@
             <div class="bar3"></div>
           </div>
         </label>
-        <div class="dropdown-content" style="right: 0">
+        <div class="dropdown-content">
           <a>Home</a>
           <a>Store</a>
           <a>About</a>
