Menu button is fixed in place while dropdown is shown - Handled dropdown sliding transition

--- a/Pages/TrialOne.html
+++ b/Pages/TrialOne.html
@@ -19,7 +19,7 @@
       <!-- Nav Items -->
 
       <!-- Dropdown menu for smaller screens -->
-      <div class="Menu">
+      <!-- <div class="Menu"> -->
         <input type="checkbox" id="Dropdown" />
         <label for="Dropdown">
           <!-- Menu Button Icon -->
@@ -34,7 +34,7 @@
           <a>Store</a>
           <a>About</a>
         </div>
-      </div>
+      <!-- </div> -->
 
       <!-- Navigation Items -->
       <ul>
